ボタンを復活させたよ

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                     data-FadeIn="2">海外1,300ヵ所以上の空港ラウンジを<br>ご利用いただける「プライオリティパス」<br>に無料でご登録いただけます。</p><a
                                     class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
-                                    data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
+                                    data-FadeIn="2.5">かんたんお申込み<span class="lineBox"><span
                                             class="animLine"></span></span></a>
                             </div>
                         </div>
@@ -420,7 +420,7 @@
                                     全国のプレミアムホテルを優待料金で<br>ご利用いただけるほか、ホテルごとに<br>会員様だけの特典をご用意しております。<br>日常の喧騒から逃れ、特別な空間で<br>過ごす優雅なひとときをお楽しみください。
                                 </p><a class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
-                                    data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
+                                    data-FadeIn="2.5">かんたんお申込み<span class="lineBox"><span
                                             class="animLine"></span></span></a>
                             </div>
                         </div>
@@ -553,7 +553,7 @@
                                         <div class="info__txt"> <span class="info__note__trial">* 海外旅行中の事故 ⇨
                                                 最高1億円補償<br>国内旅行中の事故 ⇨ 最高5,000万円補償</span>
                                         </div><a class="c-btn c-product__object__btn add-blank c-product__object__txt"
-                                            href="" target="_blank">お申込みはこちら</a>
+                                            href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_blank">かんたんお申込み</a>
                                     </div>
                                     <div class="p-products__card__inner__img">
                                         <div class="p-products__card__inner__img__inner"><img
@@ -629,8 +629,8 @@
 
                 <div class="p-application__concent" data-module="ScrollFade ConcentBtn">
                     <a class="p-application__concent__btn c-btn add-line" data-module="ScrollFade"
-                        href="http://www.saisoncard.co.jp/rd/3161813-sbs" target="_blank"
-                        data-target="browserChecker">お申込みはこちら<span class="lineBox"><span
+                        href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_blank"
+                        data-target="browserChecker">かんたんお申込み<span class="lineBox"><span
                                 class="animLine"></span></span></a>
                 </div>
 
@@ -641,7 +641,7 @@
                     <div class="content">
                         <h3 class="c-bnr__ttl" data-target="browserChecker">P<span>LATINUM</span> </h3>
                         <p class="c-bnr__hdg" data-target="browserChecker">セゾンアメックスプラチナカード</p>
-                        <div class="c-btn c-bnr_btn add-line" data-target="browserChecker">申込む<span
+                        <div class="c-btn c-bnr_btn add-line" data-target="browserChecker">かんたんお申込み<span
                                 class="lineBox"><span class="animLine"></span></span>
                         </div>
                     </div>
@@ -649,7 +649,7 @@
                 <div class="use-other">
                     <div class="content">
                         <h3 class="c-bnr__ttl" data-target="browserChecker">セ<span>ゾン・プラチナ・アメリカン・エキスプレス</h3>
-                        <p class="c-bnr__hdg" data-target="browserChecker">カード申込みへ</p>
+                        <p class="c-bnr__hdg" data-target="browserChecker">かんたんお申込み</p>
                     </div>
                     <div class="ico"></div>
                 </div>
@@ -707,8 +707,8 @@
                 </div>
                 <div class="p-application__concent" data-module="ScrollFade ConcentBtn">
                     <a class="p-application__concent__btn c-btn add-line" data-module="ScrollFade"
-                        href="http://www.saisoncard.co.jp/rd/3161813-sbs" target="_blank"
-                        data-target="browserChecker">お申込みはこちら<span class="lineBox"><span
+                        href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_blank"
+                        data-target="browserChecker">かんたんお申込み<span class="lineBox"><span
                                 class="animLine"></span></span></a>
                 </div>
             </div>
@@ -804,8 +804,8 @@
                         </div>
                         <div class="c-footer_link_area">
                             <ul class="c-footer_links" data-target="browserChecker">
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>カード詳細ページ</span></a></li>
+                                <li class="link"><a href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_self"
+                                        data-target="browserChecker"><span>プラチナカードお申込へ</span></a></li>
                             </ul>
                         </div>
                     </div>
