いらない画像を消しました

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <meta name="title" content="アメックスプラチナカード" />
     <meta name="description" content="プラチナという至高の輝き、それは行動力の象徴。" />
     <meta name="keywords" />
-    <meta property="og:url" content="http://localhost:3000/" />
+    <meta property="og:url" content="" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="アメックスプラチナカード" />
     <meta property="og:description" content="プラチナという至高の輝き、それは行動力の象徴。" />
-    <meta property="og:image" content="assets/images/share/ogp.png" />
+    <meta property="og:image" content="" />
     <meta property="og:site_name" content="アメックスプラチナカード" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="" />
     <meta name="twitter:title" content="アメックスプラチナカード" />
     <meta name="twitter:description" content="プラチナという至高の輝き、それは行動力の象徴。" />
-    <meta name="twitter:image" content="assets/images/share/ogp.png" />
+    <meta name="twitter:image" content="" />
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
     <link rel="stylesheet" href="assets/styles/app.css" />
     <link
