--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="c-header_container">
                 <div class="c-header_inner">
                     <div class="c-header-logo">
-                        <a href="index.html"><img src="header_logo_box.gif" alt="" /></a>
+                        <a href="index.html"><img src="footer-logo.png" alt="" /></a>
                     </div>
                     <div class="c-header_block__menu">
                         <h1 class="topText">SAISON AMERICAN EXPRESS PLATINUM CARD</h1>
@@ -80,7 +80,7 @@
             <div class="p-opening" data-module="Opening">
                 <div class="p-opening_border p-opening_border-top"></div>
                 <div class="p-opening_border p-opening_border-bot"></div>
-                <div class="p-opening_logo"><img src="howto_card.jpg" alt="" /></div>
+                <div class="p-opening_logo"><img src="logo.png" alt="" /></div>
                 <div class="p-opening_inner">
                     <div class="p-opening_blur-area">
                         <div class="p-opening_circle p-opening_circle-01"></div>
@@ -269,7 +269,7 @@
                                         海外旅行時、Wi-Fi・携帯電話無料レンタルサービス</li>
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
-                                        専任スタッフのホテル・レストランの相談・予約手配</li>
+                                        専任スタッフのホテル・レストランのコンシェルジュサービス</li>
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
                                         ホテル・レストラン・チケット優待特典</li>
@@ -313,7 +313,7 @@
                                     data-FadeIn="2">海外1,300ヵ所以上の空港ラウンジを<br>ご利用いただける「プライオリティパス」<br>に無料でご登録いただけます。</p><a
                                     class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
-                                    data-FadeIn="2.5">かんたんお申込み<span class="lineBox"><span
+                                    data-FadeIn="2.5">新規限定申し込み<span class="lineBox"><span
                                             class="animLine"></span></span></a>
                             </div>
                         </div>
@@ -372,7 +372,6 @@
                                                 </p>
                                             </div>
                                         </div>
-
                                     </div>
                                 </li>
                             </ul>
@@ -420,7 +419,7 @@
                                     全国のプレミアムホテルを優待料金で<br>ご利用いただけるほか、ホテルごとに<br>会員様だけの特典をご用意しております。<br>日常の喧騒から逃れ、特別な空間で<br>過ごす優雅なひとときをお楽しみください。
                                 </p><a class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
-                                    data-FadeIn="2.5">かんたんお申込み<span class="lineBox"><span
+                                    data-FadeIn="2.5">新規限定お申込み<span class="lineBox"><span
                                             class="animLine"></span></span></a>
                             </div>
                         </div>
@@ -553,11 +552,11 @@
                                         <div class="info__txt"> <span class="info__note__trial">* 海外旅行中の事故 ⇨
                                                 最高1億円補償<br>国内旅行中の事故 ⇨ 最高5,000万円補償</span>
                                         </div><a class="c-btn c-product__object__btn add-blank c-product__object__txt"
-                                            href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_blank">かんたんお申込み</a>
+                                            href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_blank">新規限定お申込み</a>
                                     </div>
                                     <div class="p-products__card__inner__img">
                                         <div class="p-products__card__inner__img__inner"><img
-                                                src="internet-3484137_640.jpg" alt="">
+                                                src="adi-goldstein-EUsVwEOsblE-unsplash.jpg" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -630,7 +629,7 @@
                 <div class="p-application__concent" data-module="ScrollFade ConcentBtn">
                     <a class="p-application__concent__btn c-btn add-line" data-module="ScrollFade"
                         href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_blank"
-                        data-target="browserChecker">かんたんお申込み<span class="lineBox"><span
+                        data-target="browserChecker">新規限定お申込み<span class="lineBox"><span
                                 class="animLine"></span></span></a>
                 </div>
 
@@ -641,7 +640,7 @@
                     <div class="content">
                         <h3 class="c-bnr__ttl" data-target="browserChecker">P<span>LATINUM</span> </h3>
                         <p class="c-bnr__hdg" data-target="browserChecker">セゾンアメックスプラチナカード</p>
-                        <div class="c-btn c-bnr_btn add-line" data-target="browserChecker">かんたんお申込み<span
+                        <div class="c-btn c-bnr_btn add-line" data-target="browserChecker">新規限定お申込み<span
                                 class="lineBox"><span class="animLine"></span></span>
                         </div>
                     </div>
@@ -649,7 +648,7 @@
                 <div class="use-other">
                     <div class="content">
                         <h3 class="c-bnr__ttl" data-target="browserChecker">セ<span>ゾン・プラチナ・アメリカン・エキスプレス</h3>
-                        <p class="c-bnr__hdg" data-target="browserChecker">かんたんお申込み</p>
+                        <p class="c-bnr__hdg" data-target="browserChecker">新規限定お申込み</p>
                     </div>
                     <div class="ico"></div>
                 </div>
@@ -708,7 +707,7 @@
                 <div class="p-application__concent" data-module="ScrollFade ConcentBtn">
                     <a class="p-application__concent__btn c-btn add-line" data-module="ScrollFade"
                         href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_blank"
-                        data-target="browserChecker">かんたんお申込み<span class="lineBox"><span
+                        data-target="browserChecker">新規限定おお申込み<span class="lineBox"><span
                                 class="animLine"></span></span></a>
                 </div>
             </div>
