オンタッチスタートを不随しました

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                 <section id="CP_ACCORDION">
                     <div class="p-accordion">
                         <ul>
-                            <li class="p-accordion__container" data-module="ScrollFade Accordion">
+                            <li class="p-accordion__container" data-module="ScrollFade Accordion" ontouchstart="">
                                 <div class="p-accordion__btn">
                                     <div class="p-accordion__btn__ttl" data-target="browserChecker">その他、プラチナの頭抜けたサービス
                                     </div>
