アメックスはいったんこれで終わりにしよっか

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="../../cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css" />
     <script type="text/javascript" src="assets/scripts/footerRead.js" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -246,7 +248,6 @@
                                         data-target="browserChecker" data-FadeIn="2.5">
                                         プラチナという至高の輝きそれは行動力の象徴</p>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -306,11 +307,11 @@
                                 <h2 class="c-top_block__sec_ttl ttl3" data-target="browserChecker" data-FadeIn="0.6">
                                     SERVICE OF TRIP</h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
-                                    ご出発前にくつろぎのひとときを</p>
+                                    ご出発前に極上のひとときを</p>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
                                     海外・国内空港<br class="is-sp">ラウンジサービス</h3>
                                 <p class="c-top_block__copy add-line__before hei1" data-target="browserChecker"
-                                    data-FadeIn="2">海外1,300ヵ所以上の空港ラウンジを<br>ご利用いただける「プライオリティパス」<br>に無料でご登録いただけます。</p><a
+                                    data-FadeIn="2">海外1,300ヵ所以上の空港ラウンジを<br>ご利用可能な「プライオリティパス」<br>に無料でご登録いただけます。</p><a
                                     class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
                                     data-FadeIn="2.5">新規限定申し込み<span class="lineBox"><span
@@ -340,7 +341,7 @@
                                                 <p class="txt" data-target="browserChecker">
                                                     「生涯忘れることのできない体験」を約束してくれるホテルを厳選してご紹介。
                                                     セゾンプラチナ・アメリカン・エキスプレス・カードなら専用ページからのご登録でTablet
-                                                    Plusの年会費(99ドル)が永年無料。各ホテルの選りすぐりの特典をお楽しみいただけます。</p>
+                                                    Plusの年会費(99ドル)が永年無料。各ホテル最高級の特典をお楽しみいただけます。</p>
                                             </div>
                                         </div>
                                     </div>
@@ -351,9 +352,9 @@
                                             <div class="object__inner">
                                                 <img class="service" src="the-palm-962785_640.jpg" alt="">
                                                 <p class="ttl ttl4" data-target="browserChecker">カードデスクサービス</p>
-                                                <p class="border">旅の予約はいつでもお任せ</p>
+                                                <p class="border">旅の予約は万事お任せ</p>
                                                 <p class="txt" data-target="browserChecker">
-                                                    ホテルや航空券・JR特急券のご予約、海外出張前の渡航先情報のご案内(現地レストラン、オプショナルツアー、舞台チケットのご紹介やご予約)、会員様のご希望に合わせた旅行プランのお手配まで24時間365日、専任スタッフがきめ細かくご提案・ご対応させていただきます。
+                                                    ホテルや航空券・JR特急券のご予約、海外出張前の渡航先情報のご案内(現地レストラン、舞台チケットのご紹介やご予約、オプショナルツアー)、会員様の希望にマッチした旅行プランのお手配まで24時間365日、専任スタッフがきめ細かくご提案・ご対応させていただきます。
                                                 </p>
                                             </div>
                                         </div>
@@ -411,12 +412,12 @@
                                 <h2 class="c-top_block__sec_ttl ttl3" data-target="browserChecker" data-FadeIn="0.6">
                                     SPECIAL LIFE</h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
-                                    特別な空間で優雅なプライベートタイムを</p>
+                                    格別な空間で優雅なプライベートタイムを</p>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
                                     プレミアムホテル<br class="is-sp">プリビレッジ</h3>
                                 <p class="c-top_block__copy add-line__before hei2" data-target="browserChecker"
                                     data-FadeIn="2">
-                                    全国のプレミアムホテルを優待料金で<br>ご利用いただけるほか、ホテルごとに<br>会員様だけの特典をご用意しております。<br>日常の喧騒から逃れ、特別な空間で<br>過ごす優雅なひとときをお楽しみください。
+                                    全国のプレミアムホテルを優待料金で<br>ご利用いただけるほか、ホテルごとに<br>会員様だけの特典をご用意しております。<br>日常の喧騒から逃れ、特別な空間で<br>過ごす高貴なひとときをお楽しみください。
                                 </p><a class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
                                     data-FadeIn="2.5">新規限定お申込み<span class="lineBox"><span
@@ -442,7 +443,7 @@
                                             <div class="object__inner">
                                                 <img class="service" src="spa-853462_640.jpg" alt="">
                                                 <p class="ttl ttl4" data-target="browserChecker">オントレ</p>
-                                                <p class="border">さまざまなシーンを豊かに演出</p>
+                                                <p class="border">あらゆるシーンを豊かに演出</p>
                                                 <p class="txt" data-target="browserChecker">
                                                     一流ホテルをはじめダイニング、スパ、ショッピングなど上質なお時間をお過ごしいただける特別なご優待サービスをご用意し通ります。プラチナメンバーだけにご提供するアメリカン・エキスプレスならではのラインナップをお楽しみください。
                                                 </p>
@@ -456,7 +457,7 @@
                                             <div class="object__inner">
                                                 <img class="service" src="soheb-zaidi-awin-9RBlpE-unsplash.jpg" alt="">
                                                 <p class="ttl ttl4" data-target="browserChecker">セゾンプレミアム<br>ゴルフサービス</p>
-                                                <p class="border">特別なゴルフ体験をお届け</p>
+                                                <p class="border">愉快なゴルフ体験をお届け</p>
                                                 <p class="txt" data-target="browserChecker">
                                                     憧れの名門コースでのプレーをはじめ、コースレッスン会やプロを招いたイベントなどご優待料金でご利用いただけます。
                                                 </p>
@@ -471,7 +472,7 @@
                                                 <img class="service" src="humphrey-muleba-LOA2mTj1vhc-unsplash.jpg"
                                                     alt="">
                                                 <p class="ttl ttl4" data-target="browserChecker">「コナミスポーツクラブ」にご優待</p>
-                                                <p class="border">運動をもっと気軽に</p>
+                                                <p class="border">気軽に体を動かせる日常へ</p>
                                                 <p class="txt" data-target="browserChecker">
                                                     全国役500ヵ所のコナミスポーツクラブ及び提携施設にて「月会費プラン」が法人会員料金でご利用いただけます。また一回ごとの利用ができる「都度利用プラン」もご用意しております。
                                                 </p>
@@ -502,7 +503,7 @@
                                         <ul class="p-accordion__list">
                                             <li class="p-accordion__list__item" data-target="browserChecker">
                                                 コートお預かりサービスご優待</li>
-                                            <p class="border2">旅行先の気候に<br>合わせてご出発</p>
+                                            <p class="border2">旅行先の天候に<br>合わせてご出発</p>
                                             <p class="p-text">
                                                 冬の外出に欠かせないコートも、海外旅行先では大きな荷物になってしまうことも。そんな時には「コートお預かりサービス」を会員様優待料金でご利用いただけます。
                                             </p>
@@ -515,14 +516,14 @@
 
                                             <li class="p-accordion__list__item" data-target="browserChecker">手荷物無料宅配サービス
                                             </li>
-                                            <p class="border2">空港までの<br>移動を手軽に</p>
+                                            <p class="border2">空港までの<br>移動を身軽に</p>
                                             <p class="p-text">国際線をご利用の際、空港 -
                                                 ご自宅間の手荷物配送をスーツケース１個まで無料でご利用いただけます。ファミリーカード会員様も同様にご利用いただけます。</p>
                                             <li class="p-accordion__list__item" data-target="browserChecker">コンシェルジュサービス
                                             </li>
                                             <p class="border2">専任のコンシェルジュが<br>あなたをサポート</p>
                                             <p class="p-text">
-                                                国内レストランのご案内・ご予約やハイヤー送迎サービス、フラワーギフトのお手配などさまざまなお問い合わせに専任スタッフが24時間365日お答えします。
+                                                国内レストランのご案内・ご予約やハイヤー送迎サービス、フラワーギフトのお手配などさまざまなお問い合わせに専任スタッフが24時間365日ご対応します。
                                             </p>
                                         </ul>
                                     </div>
@@ -552,7 +553,8 @@
                                         <div class="info__txt"> <span class="info__note__trial">* 海外旅行中の事故 ⇨
                                                 最高1億円補償<br>国内旅行中の事故 ⇨ 最高5,000万円補償</span>
                                         </div><a class="c-btn c-product__object__btn add-blank c-product__object__txt"
-                                            href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_blank">新規限定お申込み</a>
+                                            href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/"
+                                            target="_blank">新規限定お申込み</a>
                                     </div>
                                     <div class="p-products__card__inner__img">
                                         <div class="p-products__card__inner__img__inner"><img
@@ -595,7 +597,7 @@
 
 
                 <section class="c-section" id="TOP_DETAIL" data-section="detail" data-gatarget="top2">
-                    
+
                     <div class="p-top-detail_container">
                         <div class="p-top-detail_inner c-top_inner">
 
@@ -613,7 +615,8 @@
                                 <h3 class="c-top_block__hdg--lv1" data-target="browserChecker" data-lineAnim="0">
                                     今なら『ご入会特典』<br class="is-sp">永久不滅ポイント<br>最大40,000円相当プレゼント</h3>
                                 <p class="p-top-detail_block__desc--lv1" data-target="browserChecker" data-FadeIn="0.6">
-                                    【新規ご入会キャンペーン】<br class="is-sp">2020年10月20日(火)〜<br>2020年12月23日(水)まで<br><br class="is-sp">①
+                                    【新規ご入会キャンペーン】<br class="is-sp">2020年10月20日(火)〜<br>2020年12月23日(水)まで<br><br
+                                        class="is-sp">①
                                     500,000円以上のご利用で、40,000円相当(8,000ポイント)をプレゼント<br><br class="is-sp">
                                     ② 300,000円以上のご利用で、24,000円相当(4,800ポイント)をプレゼント
                                     <br class="is-sp"><br>③ 100,000円以上のご利用で、7,000円相当(1,400ポイント)をプレゼント</p>
@@ -729,8 +732,7 @@
                         <div class="c-product__object__img__inner">
                             <div class="c-product__object__img__badge c-product__object__img__badge--basic"><img
                                     src="./商品ラインナップ｜リバイタル（REVITAL）｜資生堂_files/recommended_badge.png" alt="">
-                            </div><img class="c-product__object__img__inner__img"
-                                src="gold-card.png" alt="">
+                            </div><img class="c-product__object__img__inner__img" src="gold-card.png" alt="">
                         </div>
                     </div>
                     <div class="c-product__object__lead" data-module="ScrollFade"
@@ -743,8 +745,7 @@
                     <div class="c-product__object__type" data-module="ScrollFade"
                         style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">よりスマートで安心感のある旅行を楽しむ</div><a
                         class="c-btn c-product__object__btn add-blank c-product__object__txt"
-                        href="https://www.saisoncard.co.jp/amextop/all-first0/"
-                        target="_blank" data-module="ScrollFade"
+                        href="https://www.saisoncard.co.jp/amextop/all-first0/" target="_blank" data-module="ScrollFade"
                         style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">詳細を見る</a>
                 </div>
                 <div class="c-product__object">
@@ -762,8 +763,7 @@
                     <div class="c-product__object__type" data-module="ScrollFade"
                         style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">ご旅行はスムーズで安心</div><a
                         class="c-btn c-product__object__btn add-blank c-product__object__txt"
-                        href="https://www.saisoncard.co.jp/amextop/all-first0/"
-                        target="_blank" data-module="ScrollFade"
+                        href="https://www.saisoncard.co.jp/amextop/all-first0/" target="_blank" data-module="ScrollFade"
                         style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">詳細を見る</a>
                 </div>
                 <div class="c-product__object">
@@ -781,8 +781,7 @@
                     <div class="c-product__object__type" data-module="ScrollFade"
                         style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">ご旅行に新たな出会いと感動</div><a
                         class="c-btn c-product__object__btn add-blank c-product__object__txt"
-                        href="https://www.saisoncard.co.jp/amextop/all-first0/"
-                        target="_blank" data-module="ScrollFade"
+                        href="https://www.saisoncard.co.jp/amextop/all-first0/" target="_blank" data-module="ScrollFade"
                         style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">詳細を見る</a>
                 </div>
             </div>
@@ -797,22 +796,20 @@
                 <div class="c-footer_inner">
                     <div class="c-footer__block">
                         <div class="c-footer_product_area">
-                            <h2 class="c-footer__logo"><img class="f-logo" src="footer-logo.png"
-                                    alt="" /></h2>
+                            <h2 class="c-footer__logo"><img class="f-logo" src="footer-logo.png" alt="" /></h2>
                             <p class="c-footer__sub" data-target="browserChecker">プラチナという至高の輝き、それは行動力の象徴。</p>
                         </div>
                         <div class="c-footer_link_area">
                             <ul class="c-footer_links" data-target="browserChecker">
-                                <li class="link"><a href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_self"
-                                        data-target="browserChecker"><span>プラチナカードお申込へ</span></a></li>
+                                <li class="link"><a href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/"
+                                        target="_self" data-target="browserChecker"><span>プラチナカードお申込へ</span></a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="c-footer__line is-pc"></div>
                     <div class="c-footer__block is-bktop">
-                        <button class="c-footer_bk2top" data-module="BackToTop"><span class="c-footer_bk2top__txt"
-                                data-target="browserChecker">Back To Top</span><span
-                                class="c-footer_bk2top__icon"></span></button>
+                        <button id="js-button" class="c-footer_bk2top" data-module="BackToTop"><span class="c-footer_bk2top__txt"
+                                data-target="browserChecker">Back To Top</span><span class="c-footer_bk2top__icon"></span></button>
                     </div>
                 </div>
             </div>
@@ -829,6 +826,29 @@
         </footer>
         <script src="assets/scripts/app.js"></script>
     </div>
+
+
+    <script type="text/javascript">
+        scrollTop('js-button', 500);
+        function scrollTop(elem, duration) {
+            let target = document.getElementById(elem);
+            target.addEventListener('click', function () {
+                let currentY = window.pageYOffset;
+                let step = duration / currentY > 1 ? 10 : 100;
+                let timeStep = duration / currentY * step;
+                let intervalID = setInterval(scrollUp, timeStep);
+                function scrollUp() {
+                    currentY = window.pageYOffset;
+                    if (currentY === 0) {
+                        clearInterval(intervalID);
+                    } else {
+                        scrollBy(0, -step);
+                    }
+                }
+            });
+        }
+    </script>
+
 </body>
 
 <!-- Mirrored from www.shiseido.co.jp/revital/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 08 Sep 2020 04:55:39 GMT -->
