誤字を修正

--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
                 <div class="p-application__concent" data-module="ScrollFade ConcentBtn">
                     <a class="p-application__concent__btn c-btn add-line" data-module="ScrollFade"
                         href="https://www.saisoncard.co.jp/amextop/platinumbusiness-new/" target="_blank"
-                        data-target="browserChecker">新規限定おお申込み<span class="lineBox"><span
+                        data-target="browserChecker">新規限定お申込み<span class="lineBox"><span
                                 class="animLine"></span></span></a>
                 </div>
             </div>
