トップの文言を変えました！

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                         PREMIUM PLATINUM CARD</h2>
                                     <h3 class="c-top_block__hdg--lv1 p-top-mv_block__hdg--lv1"
                                         data-target="browserChecker" data-lineAnim="1.5">
-                                        最高の瞬間を貴方に<br>プラチナカード</h3>
+                                        <ruby>白銀<rt>プラチナ</rt></ruby>と暮らす<br>最高の毎日をあなたに</h3>
                                     <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
                                         気品の溢れる、</p>
                                     <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
