トップのロゴを変更しました

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="c-header_container">
                 <div class="c-header_inner">
                     <div class="c-header-logo">
-                        <a href="index.html"><img src="footer-logo.png" alt="" /></a>
+                        <a href="index.html"><img src="kasami000002.png" alt="" /></a>
                     </div>
                     <div class="c-header_block__menu">
                         <h1 class="topText">SAISON AMERICAN EXPRESS PLATINUM CARD</h1>
@@ -239,11 +239,7 @@
                                         PREMIUM PLATINUM CARD</h2>
                                     <h3 class="c-top_block__hdg--lv1 p-top-mv_block__hdg--lv1"
                                         data-target="browserChecker" data-lineAnim="1.5">
-                                        <ruby>白銀<rt>プラチナ</rt></ruby>と暮らす<br>最高の毎日をあなたに</h3>
-                                    <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
-                                        気品の溢れる、</p>
-                                    <p class="p-top-mv_block__name" data-target="browserChecker" data-FadeIn="2">
-                                        高ステータスな人間へ</p>
+                                        白銀と暮らす<br>最高の毎日をあなたに</h3>
                                     <p class="c-top_block__desc--lv1 p-top-mv_block__desc--lv1 an"
                                         data-target="browserChecker" data-FadeIn="2.5">
                                         プラチナという至高の輝きそれは行動力の象徴</p>
