一通りコミットは完成しました

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="c-top_block__content">
+                            <div class="c-top_block__content2">
                                 <h2 class="c-top_block__sec_ttl ttl3" data-target="browserChecker" data-FadeIn="0.6">
                                     SERVICE OF TRIP</h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
@@ -404,7 +404,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="c-top_block__content">
+                            <div class="c-top_block__content2">
                                 <h2 class="c-top_block__sec_ttl ttl3" data-target="browserChecker" data-FadeIn="0.6">
                                     SPECIAL LIFE</h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
