手厚い補償サービおす

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                                     style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">
                                     <div class="p-products__card__inner__info">
                                         <div class="info__label">SECURITY</div>
-                                        <div class="info__desc">手堅い<br>補償サービス</div>
+                                        <div class="info__desc">手厚い<br>補償サービス</div>
                                         <div class="info__txt">①ショッピング安心保険<br>*
                                             購入物品の損害を購入日から<br>120日間、年間300万円まで保証<br>②オンラインプロテクション</div>
                                         <div class="info__txt">*「不正使用」による損害を保証<br>③海外・国内旅行損害保険</div>
